feat: :sparkles: add darkMode support
- change theme color palettes
- improve component UI styles
- add `inherit` as color prop to `Drawer` component

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/src/lib/scss/components/accordionItem/_gradient.scss
+++ b/src/lib/scss/components/accordionItem/_gradient.scss
@@ -26,11 +26,14 @@ $description-fontSize: 0.8rem;
 			background: transparent;
 			.labelContainer {
 				.icon {
-					color: hsl(var(--dark) / 100%);
+					color: hsl(var(--base) / 100%);
 				}
 				.label {
+					.title {
+						color: hsl(var(--fg-color) / 100%);
+					}
 					.description {
-						color: hsl(var(--dark) / 100%);
+						color: hsl(var(--base) / 100%);
 					}
 				}
 			}
