--- a/src/lib/scss/components/drawer/_outline.scss
+++ b/src/lib/scss/components/drawer/_outline.scss
@@ -1,10 +1,10 @@
 @mixin drawer-outline {
-	&.outline {
+	&.outline:not(.inherit) {
 		.drawer {
-			background-color: hsl(var(--white) / 100%);
-			background-image: linear-gradient(hsl(var(--natural) / 20%), hsl(var(--natural) / 20%));
+			background-color: hsl(var(--bg-color) / 100%);
+			background-image: linear-gradient(hsl(var(--fg-color) / 5%), hsl(var(--fg-color) / 5%));
 			color: hsl(var(--natural-font) / 100%);
-			border-color: hsl(var(--natural) / 20%);
+			border-color: hsl(var(--base) / 100%);
 			> .content {
 				&::-webkit-scrollbar {
 					background-color: hsl(var(--base-font) / 100%);
@@ -12,6 +12,9 @@
 				&::-webkit-scrollbar-thumb {
 					background-color: hsl(var(--base) / 100%);
 				}
+			}
+			> .header {
+				color: hsl(var(--fg-color) / 100%);
 			}
 		}
 		:global {
@@ -26,6 +29,12 @@
 					}
 				}
 			}
+		}
+	}
+	&.outline.inherit {
+		.drawer {
+			background-color: hsl(var(--bg-color) / 100%);
+			background-image: linear-gradient(hsl(var(--fg-color) / 5%), hsl(var(--fg-color) / 5%));
 		}
 	}
 }
