--- a/src/lib/scss/components/modal/_base.scss
+++ b/src/lib/scss/components/modal/_base.scss
@@ -33,24 +33,22 @@ $base-paddingY: $paddingY;
 			position: absolute;
 			top: 0;
 			right: 0;
-			:global {
-				button {
-					display: flex;
-					padding: $base-paddingY * 2 $base-paddingX;
-					margin: 0;
-					border: 1px solid hsl(var(--black) / 10%);
-					border-radius: $base-borderRadius;
-					outline: 0;
-					background-color: hsl(var(--bg-color));
-					cursor: pointer;
-					color: hsl(var(--base));
-					font-size: 1rem;
-					transform: translate($base-paddingY, $base-paddingX);
-					transition: border 0.3s cubic-bezier(0.39, 0.575, 0.565, 1),
-						background-color 0.3s cubic-bezier(0.39, 0.575, 0.565, 1),
-						box-shadow 0.3s cubic-bezier(0.39, 0.575, 0.565, 1);
-					position: relative;
-				}
+			button {
+				display: flex;
+				padding: $base-paddingY * 2 $base-paddingX;
+				margin: 0;
+				border: none;
+				border-radius: $base-borderRadius;
+				outline: 0;
+				background-color: hsl(var(--bg-color));
+				cursor: pointer;
+				color: hsl(var(--base));
+				font-size: 1rem;
+				// transform: translate($base-paddingY, $base-paddingX);
+				transition: border 0.3s cubic-bezier(0.39, 0.575, 0.565, 1),
+					background-color 0.3s cubic-bezier(0.39, 0.575, 0.565, 1),
+					box-shadow 0.3s cubic-bezier(0.39, 0.575, 0.565, 1);
+				position: relative;
 			}
 			& ~ .contentWrapper .header {
 				padding-right: $base-paddingX * 2;
