--- a/src/lib/scss/modules/default.scss
+++ b/src/lib/scss/modules/default.scss
@@ -1,7 +1,8 @@
 @use 'sass:math';
 @use 'sass:list';
+@use 'sass:meta';
 @use 'sass:map';
 @import 'functions';
-@import 'mixins';
 @import 'colors';
 @import 'variables';
+@import 'mixins';
