--- a/src/lib/scss/components/checkbox/_base.scss
+++ b/src/lib/scss/components/checkbox/_base.scss
@@ -19,8 +19,13 @@ $mask-borderRadius: $borderRadius * 0.45;
 	align-items: center;
 	align-self: center;
 	margin: $base-marginY $base-marginX;
+	padding-inline-end: $mask-marginX;
 	font-size: $base-fontSize;
 	border-radius: $base-borderRadius;
+	outline-style: solid;
+	outline-width: $base-borderWidth * 0.5;
+	outline-color: transparent;
+	transition: outline 0.3s;
 	@include truncate(calc(100% - 1rem));
 	.inputMask {
 		position: relative;
@@ -127,5 +132,8 @@ $mask-borderRadius: $borderRadius * 0.45;
 				box-shadow: 0 3px 8px 0 hsla(var(--base) / 35%);
 			}
 		}
+	}
+	&:focus-within {
+		outline-color: hsla(var(--base) / 5%);
 	}
 }
