--- a/src/lib/scss/components/radio/_base.scss
+++ b/src/lib/scss/components/radio/_base.scss
@@ -18,9 +18,14 @@ $mask-marginY: $marginY * 0.8;
 	align-items: center;
 	align-self: center;
 	margin: $base-marginY $base-marginX;
+	padding-inline-end: $mask-marginX;
 	font-size: $base-fontSize;
 	border-radius: $base-borderRadius;
+	outline-style: solid;
+	outline-width: $base-borderWidth * 0.5;
+	outline-color: transparent;
 	color: hsl(var(--fg-color));
+	transition: outline 0.3s;
 	@include truncate(calc(100% - 1rem));
 	.inputMask {
 		position: relative;
@@ -108,5 +113,8 @@ $mask-marginY: $marginY * 0.8;
 				box-shadow: 0 3px 8px 0 hsla(var(--base) / 35%);
 			}
 		}
+	}
+	&:focus-within {
+		outline-color: hsla(var(--base) / 5%);
 	}
 }
