--- a/src/lib/scss/components/switch/_base.scss
+++ b/src/lib/scss/components/switch/_base.scss
@@ -15,7 +15,6 @@ $thumb-height: $base-height * 1.2;
 & {
 	position: relative;
 	display: inline-flex;
-	border-width: unset;
 	align-self: center;
 	margin: $base-marginY $base-marginX;
 	border-radius: $base-borderRadius;
@@ -24,6 +23,9 @@ $thumb-height: $base-height * 1.2;
 		margin: auto;
 		background-color: hsl(var(--natural) / 95%);
 		border-radius: $base-borderRadius;
+		outline-width: 0.11rem;
+		outline-style: solid;
+		outline-color: transparent;
 		transition: all 0.3s ease;
 		overflow: hidden;
 		display: inline-flex;
@@ -120,6 +122,7 @@ $thumb-height: $base-height * 1.2;
 				border-color: hsl(var(--natural));
 				background-color: hsl(var(--natural));
 				color: hsl(var(--natural-font));
+				box-shadow: inset 0 0 3px 0 hsl(var(--natural-font) / 2%);
 				.thumb {
 					width: $thumb-width * 1.1;
 					right: calc(100% - $thumb-width * 1.1 - $mask-margin * 2);
@@ -149,6 +152,11 @@ $thumb-height: $base-height * 1.2;
 	@include action-active {
 		input:not(:disabled) ~ .inputMask {
 			transform: scale(0.95);
+		}
+	}
+	&:focus-within {
+		.inputMask {
+			outline-color: hsl(var(--dark));
 		}
 	}
 }
